--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -211,7 +211,7 @@ header nav .button:hover{
     </header>
 	<br>
 	<div id="topmid">
-		<h1>Welcome to Mayur<br>Book Store</h1>
+		<h1>Welcome to Mayur Wagh<br>Book Store</h1>
 	</div>
 
 	<!-- <div class="home">
